Footer Nav Changes

--- a/index.html
+++ b/index.html
@@ -170,9 +170,6 @@
         </div>
       </div>
     </section><!-- End Welcome Section -->
-
-
-
     <!-- ======= Call to Action Section ======= -->
     <section class="cta" id="our-mission">
       <div class="container">
@@ -181,194 +178,19 @@
             <h2>
               Our Mission
             </h2>
-
             <p>
               Our mission is simple yet profound: to bridge the gap between talent and opportunity. We believe that everyone deserves a chance to shine in their dream career, and we're committed to making that happen. Through personalized guidance, unmatched expertise, and a passion for nurturing talent, we aim to empower individuals to reach their professional zenith.
             </p>
           </div>
-
-          <!-- <div class="col-lg-3 col-sm-12 text-lg-right text-center">
-            <a class="btn btn-ghost" href="#">Buy This Template</a>
-          </div> -->
         </div>
       </div>
     </section><!-- End Call to Action Section -->
-
-    <!-- ======= Portfolio Section ======= -->
-    <!--section class="portfolio" id="portfolio">
-
-      <div class="container text-center">
-        <h2>
-          Join Us in Shaping Futures
-        </h2>
-
-        <p>
-          <h3>At Monaarck, we're not just passionate about finding jobs – we're devoted to transforming lives. Whether you're a fresh graduate, a seasoned professional looking for a change, or someone seeking to re-enter the workforce, we're here to pave the path to your success.</h3>
-        </p>
-
-        <p>
-          Let's embark on this journey together. Join us in shaping futures and turning dreams into reality. Contact us today to take the first step towards a brighter, more fulfilling career.
-        </p>
-      </div>
-
-      <div class="portfolio-grid d-none">
-        <div class="row">
-          <div class="col-lg-3 col-sm-6 col-xs-12">
-            <div class="card card-block">
-              <a href="assets/img/porf-1.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery"><img alt="" src="assets/img/porf-1.jpg">
-                <div class="portfolio-over">
-                  <div>
-                    <h3 class="card-title">
-                      The Dude Rockin'
-                    </h3>
-
-                    <p class="card-text">
-                      Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-sm-6 col-xs-12">
-            <div class="card card-block">
-              <a href="assets/img/porf-2.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery"><img alt="" src="assets/img/porf-2.jpg">
-                <div class="portfolio-over">
-                  <div>
-                    <h3 class="card-title">
-                      The Dude Rockin'
-                    </h3>
-
-                    <p class="card-text">
-                      Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-sm-6 col-xs-12">
-            <div class="card card-block">
-              <a href="assets/img/porf-3.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery"><img alt="" src="assets/img/porf-3.jpg">
-                <div class="portfolio-over">
-                  <div>
-                    <h3 class="card-title">
-                      The Dude Rockin'
-                    </h3>
-
-                    <p class="card-text">
-                      Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-sm-6 col-xs-12">
-            <div class="card card-block">
-              <a href="assets/img/porf-4.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery"><img alt="" src="assets/img/porf-4.jpg">
-                <div class="portfolio-over">
-                  <div>
-                    <h3 class="card-title">
-                      The Dude Rockin'
-                    </h3>
-
-                    <p class="card-text">
-                      Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-3 col-sm-6 col-xs-12">
-            <div class="card card-block">
-              <a href="assets/img/porf-5.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery"><img alt="" src="assets/img/porf-5.jpg">
-                <div class="portfolio-over">
-                  <div>
-                    <h3 class="card-title">
-                      The Dude Rockin'
-                    </h3>
-
-                    <p class="card-text">
-                      Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-sm-6 col-xs-12">
-            <div class="card card-block">
-              <a href="assets/img/porf-6.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery"><img alt="" src="assets/img/porf-6.jpg">
-                <div class="portfolio-over">
-                  <div>
-                    <h3 class="card-title">
-                      The Dude Rockin'
-                    </h3>
-
-                    <p class="card-text">
-                      Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-sm-6 col-xs-12">
-            <div class="card card-block">
-              <a href="assets/img/porf-7.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery"><img alt="" src="assets/img/porf-7.jpg">
-                <div class="portfolio-over">
-                  <div>
-                    <h3 class="card-title">
-                      The Dude Rockin'
-                    </h3>
-
-                    <p class="card-text">
-                      Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-sm-6 col-xs-12">
-            <div class="card card-block">
-              <a href="assets/img/porf-8.jpg" class="portfolio-lightbox" data-gallery="portfolioGallery"><img alt="" src="assets/img/porf-8.jpg">
-                <div class="portfolio-over">
-                  <div>
-                    <h3 class="card-title">
-                      The Dude Rockin'
-                    </h3>
-
-                    <p class="card-text">
-                      Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section--><!-- End Portfolio Section -->
-
     <!-- ======= Team Section ======= -->
     <section class="team d-none" id="team">
       <div class="container">
         <h2 class="text-center">
           Meet our team
         </h2>
-
         <div class="row">
           <div class="col-sm-3 col-xs-6">
             <div class="card card-block">
@@ -555,44 +377,28 @@
               &copy; Copyright <strong>Monaarck</strong>. All Rights Reserved
             </p>
             <div class="credits">
-              <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Bell
-            -->
               Designed by <a href="http://monaarckinc.co.uk/">Monaarck</a>
             </div>
           </div>
-
           <div class="col-lg-6 col-xs-12 text-lg-right text-center">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a href="index.html">Home</a>
+                <a href="#hero">Home</a>
               </li>
-
               <li class="list-inline-item">
                 <a href="#about">About Us</a>
               </li>
-
               <li class="list-inline-item">
-                <a href="#features">Features</a>
+                <a href="#who-we-are">Who We Are</a>
               </li>
-
               <li class="list-inline-item">
-                <a href="#portfolio">Portfolio</a>
+                <a href="#our-mission">Our Mission</a>
               </li>
-
-              <li class="list-inline-item">
-                <a href="#team">Team</a>
-              </li>
-
               <li class="list-inline-item">
                 <a href="#contact">Contact</a>
               </li>
             </ul>
           </div>
-
         </div>
       </div>
     </div>
