--- a/electricity.html
+++ b/electricity.html
@@ -62,6 +62,10 @@
       #header.active .header-social-links a {
         color: #000;
       }
+      #header.active a.call-button {
+        background: var(--theme-color);
+        color: #fff;
+      }
     </style>
 
     <!-- =======================================================
@@ -87,29 +91,34 @@
 
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+            <li><a class="nav-link scrollto" href="/#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="/#about">About Us</a></li>
             <li>
-              <a class="nav-link scrollto" href="/#features">Our Process</a>
+              <a class="nav-link scrollto" href="/#who-we-are">Who We Are</a>
+            </li>
+            <li>
+              <a class="nav-link scrollto" href="/#our-mission">Our Mission</a>
             </li>
             <li class="dropdown">
               <a href="/#services" class="nav-link scrollto active"
                 ><span>Services</span> <i class="bi bi-chevron-down"></i
               ></a>
               <ul>
-                <li><a href="/#">Business Electricity</a></li>
-                <li><a href="/#">Employment Agency</a></li>
+                <li><a href="./electricity.html">Business Electricity</a></li>
+                <li>
+                  <a href="./employment-agency.html">Employment Agency</a>
+                </li>
               </ul>
             </li>
-            <li><a class="nav-link scrollto" href="/#portfolio">Join Us</a></li>
-            <!-- <li><a class="nav-link scrollto" href="/#team">Team</a></li> -->
             <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <!-- .navbar -->
 
-        <div class="header-social-links d-flex align-items-center d-sm-none">
+        <div
+          class="header-social-links d-flex align-items-center d-lg-none pe-3"
+        >
           <a href="tel:02035764007" class="phone me-2"
             ><i class="bi bi-telephone-fill"></i
           ></a>
@@ -117,6 +126,9 @@
             ><i class="bi bi-envelope"></i
           ></a>
         </div>
+        <a href="tel:02084717796" class="call-button d-none d-lg-flex"
+          ><i class="bi bi-telephone-fill"></i> 0208 471 7796</a
+        >
       </div>
     </header>
     <!-- End Header -->
@@ -360,40 +372,25 @@
                 &copy; Copyright <strong>Monaarck</strong>. All Rights Reserved
               </p>
               <div class="credits">
-                <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Bell
-            -->
                 Designed by <a href="http://monaarckinc.co.uk/">Monaarck</a>
               </div>
             </div>
-
             <div class="col-lg-6 col-xs-12 text-lg-right text-center">
               <ul class="list-inline">
                 <li class="list-inline-item">
-                  <a href="index.html">Home</a>
+                  <a href="/#hero">Home</a>
                 </li>
-
                 <li class="list-inline-item">
-                  <a href="#about">About Us</a>
+                  <a href="/#about">About Us</a>
                 </li>
-
                 <li class="list-inline-item">
-                  <a href="#features">Features</a>
+                  <a href="/#who-we-are">Who We Are</a>
                 </li>
-
                 <li class="list-inline-item">
-                  <a href="#portfolio">Portfolio</a>
+                  <a href="/#our-mission">Our Mission</a>
                 </li>
-
                 <li class="list-inline-item">
-                  <a href="#team">Team</a>
-                </li>
-
-                <li class="list-inline-item">
-                  <a href="#contact">Contact</a>
+                  <a href="/#contact">Contact</a>
                 </li>
               </ul>
             </div>
